# Aplus2-simpleRAG

./: .gitignore  LICENSE  README.md  config-example.yaml  main.py  pyproject.toml
src/: agent.py  chunker.py  config.py  embeddings.py  ingest.py  tools.py  vectorstore.py
